# mergen

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DISTRIBUTION.md  LICENSE  QUEUE_FIX.txt  README.md  README.txt  build.sh  build_nuitka.py  cleanup_debug.sh  config.json  debug_main.py  install_extension.sh  main.py  mantyt-dlp.txt  pub.der  pyproject.toml  requirements.txt  test_aria2_download.py
.github/: FUNDING.yml
.github/workflows/: build.yml
browser-extension/: background.js  content.js  key.pem  manifest.json  media-detector-old.js  media-detector.js  popup.html  popup.js
browser-extension/rules/: media-rules.json
data/: mergen.desktop
docs/: aria2_installation.md
installer/linux/: PKGBUILD  build-appimage.sh  build-deb.sh  build-rpm.sh  jahgeondjmbcjleahkcmegfenejicoeb.json  mergen-wrapper.sh  mergen.1
installer/macos/: build-dmg.sh
installer/windows/: mergen.iss
native-host/: com.tunahanyrd.mergen.json  install.sh  mergen-native-host.py
scripts/: pack_crx.py  update-versions.sh
src/core/: aria2_downloader.py  aria2_monitor.py  autostart.py  browser_integration.py  config.py  download_manager.py  downloader copy.py  downloader.py  downloader.py.bak2  downloader_header.py  filename_tracker.py  i18n.py  logger.py  models.py  network.py  queue_manager.py  segment_monitor.py  url_classifier.py  utils.py  version.py  ytdlp_config.py  ytdlp_wrapper.py
tests/: test_autostart.py  test_config.py  test_filename_tracker.py  test_gui_workers.py  test_i18n.py  test_models.py  test_native_host.py  test_network.py  test_url_classifier.py
(+18 files in other folders)
